# djangoapp-integrador_ava

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requests.http
.github/workflows/: build-deploy.yml  deploy.yml  publish.yml  qa.yml
docs/: DASHBOARD_PROPOSAL.md  index.md
docs/model/: course_custom_fields.md  user_profile_custom_fields.md
docs/tests/: index.md  integrador.md  integration.md  moodle_mock.md
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  external-secret.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
src/: .coverage-baseline  boot.py  pytest.ini
src/base/: tests.py
src/dashboard/: tests.py
src/health/: tests.py
src/integrador/: decorators.py  models.py  moodle_mock.py  tests.py  views_errors.py
src/integrador/brokers/sga2tool_sga/: __init__.py
src/integrador/brokers/suap2local_suap/: __init__.py
src/security/: tests.py  views.py
src/security/templates/security/: sync_error.html
src/settings/: __init__.py  developments.py  loggings.py  observabilities.py  project.py  securities.py  tests.py
src/sga/db/: fields.py
tests_integration/: conftest.py  docker-compose.integration.yml  test_suap2local_suap.py
