[project]
name = "integrador-ava"
version = "1.1.040"
description = "É um middleware que conecta Sistemas de Gestão Acadêmica (SGA) ao Moodle."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "IFRN - DEAD", email = "dead.zl@ifrn.edu.br" }]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "avaintegration-metapackage==6.0.5.28",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6.0",
    "black>=26.3.1",
    "ruff>=0.15.11",
    "doc8>=2.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "pytest-coverage-gate>=1.0.3",
    "pytest-django>=4.12.0",
    "django-sass-processor==1.4.2",
]

[project.urls]
Homepage = "https://github.com/cte-zl-ifrn/integration-integrador_ava"
Source = "https://github.com/cte-zl-ifrn/integration-integrador_ava"
"Bug Tracker" = "https://github.com/cte-zl-ifrn/integration-integrador_ava/issues"
Download = "https://github.com/cte-zl-ifrn/integration-integrador_ava/releases/"
Docs = "https://cte-zl-ifrn.github.io/integration-integrador_ava/"

[tool.setuptools.packages.find]
where = ["."]
include = ["integrador_ava"]

[tool.coverage.run]
source = ["integrador_ava"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501"]

[tool.black]
line-length = 120

[tool.markdownlint]
"MD013" = { line_length = 120, tables = false, code_blocks = false }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
testpaths = ["src"]
pythonpath = [".", "src"]
